--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,6 @@
   background: #000000;
   color: #ffffff;
   font-family: 'Inter', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
