fix: сделать svg иконки

--- a/blocks/button/_type/button_type_add.css
+++ b/blocks/button/_type/button_type_add.css
@@ -3,7 +3,7 @@
   height: 50px;
   border: 2px solid #FFFFFF;
   border-radius: 2px;
-  background: url(../../../images/add-button.png) transparent center no-repeat;
+  background: url(../../../images/add.svg) transparent center no-repeat;
 }
 
 
