--- a/blocks/button/_type/button_type_edit.css
+++ b/blocks/button/_type/button_type_edit.css
@@ -1,7 +1,7 @@
 .button_type_edit {
   width: 24px;
   height: 24px;
-  background: url('../../../images/edit-button.png') no-repeat center transparent;
+  background: url('../../../images/edit.svg') no-repeat center transparent;
   border: 1px solid #FFFFFF;
   margin-left: 17px;
 }
