--- a/blocks/button/_type/button_type_like.css
+++ b/blocks/button/_type/button_type_like.css
@@ -1,6 +1,6 @@
 .button_type_like {
   width: 21px;
   height: 19px;
-  background: url('../../../images/like.png') center no-repeat transparent;
+  background: url('../../../images/like.svg') center no-repeat transparent;
   border: none;
 }
