fix: Правки ревью

--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -1,5 +1,5 @@
 .button_type_close {
-  background: url('../../../images/Close\ Icon.png') no-repeat center transparent;
+  background: url('../../../images/close.svg') no-repeat center transparent;
   width: 41px;
   height: 41px;
   position: absolute;
