--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,8 +5,9 @@
   align-items: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .profile {
     flex-direction: column;
+    padding-bottom: 36px;
   }
 }
