--- a/blocks/button/_type/button_type_add.css
+++ b/blocks/button/_type/button_type_add.css
@@ -7,9 +7,10 @@
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .button_type_add {
     width: 100%;
     margin-top: 36px;
+    background-size: 16px 16px;
   }
 }
