--- a/blocks/button/_type/button_type_edit.css
+++ b/blocks/button/_type/button_type_edit.css
@@ -3,12 +3,17 @@
   height: 24px;
   background: url('../../../images/edit.svg') no-repeat center transparent;
   border: 1px solid #FFFFFF;
-  margin-left: 17px;
+  position: absolute;
+  top: 20px;
+  right: -35px;
+
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .button_type_edit {
     width: 18px;
     height: 18px;
+    top: 10px;
+    right: -30px;
   }
 }
