--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,11 +1,6 @@
-.footer {
-  padding:66px 0 60px;
-}
-
 @media screen and (max-width: 1024px) {
-  .footer {
-    padding:48px 0 36px;
+  .main {
     width: calc(100% - 38px);
     margin: auto;
-  }
+    }
 }
