--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,11 +1,5 @@
 .page__container {
-  width: calc(100% - 398px);
+  max-width: 880px;
   min-height: 100vh;
   margin: 0 auto;
-}
-
-@media screen and (max-width: 1024px) {
-  .page__container {
-    width: calc(100% - 38px);
-  }
 }
