--- a/blocks/profile/__photo/profile__photo.css
+++ b/blocks/profile/__photo/profile__photo.css
@@ -6,8 +6,8 @@
   margin-right: 30px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .profile__photo {
-    margin: 0;
+    margin: 0 0 27px;
   }
 }
