--- a/blocks/button/_type/button_type_add.css
+++ b/blocks/button/_type/button_type_add.css
@@ -9,8 +9,13 @@
 
 @media screen and (max-width: 768px) {
   .button_type_add {
-    width: 100%;
     margin-top: 36px;
     background-size: 16px 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .button_type_add {
+    width: 100%;
   }
 }
