--- a/blocks/button/_type/button_type_edit.css
+++ b/blocks/button/_type/button_type_edit.css
@@ -3,17 +3,13 @@
   height: 24px;
   background: url('../../../images/edit.svg') no-repeat center transparent;
   border: 1px solid #FFFFFF;
-  position: absolute;
-  top: 20px;
-  right: -35px;
-
+  margin-left: 17px;
 }
 
 @media screen and (max-width: 768px) {
   .button_type_edit {
     width: 18px;
     height: 18px;
-    top: 10px;
-    right: -30px;
+    margin-left: 10px;
   }
 }
