fix: исправить линию в header, переполнение в profile

--- a/blocks/button/_type/button_type_add.css
+++ b/blocks/button/_type/button_type_add.css
@@ -4,6 +4,7 @@
   border: 2px solid #FFFFFF;
   border-radius: 2px;
   background: url(../../../images/add.svg) transparent center no-repeat;
+  flex-shrink: 0;
 }
 
 
