--- a/blocks/button/_type/button_type_edit.css
+++ b/blocks/button/_type/button_type_edit.css
@@ -4,6 +4,7 @@
   background: url('../../../images/edit.svg') no-repeat center transparent;
   border: 1px solid #FFFFFF;
   margin-left: 17px;
+  flex-shrink: 0;
 }
 
 @media screen and (max-width: 768px) {
