--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,17 @@
 .header {
   padding: 45px 0 40px;
-  width: 100%;
   margin: auto;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media screen and (max-width: 1024px) {
   .header {
-    width: calc(100% - 38px);
+    padding-left: 19px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .header {
-    width: calc(100% - 54px);
-    padding: 28px 0 32px;
+    padding: 28px 27px 32px;
   }
 }
