--- a/blocks/button/_type/button_type_submit.css
+++ b/blocks/button/_type/button_type_submit.css
@@ -1,4 +1,4 @@
-.button_type_save {
+.button_type_submit {
   width: 100%;
   height: 50px;
   border-radius: 2px;
@@ -10,12 +10,12 @@
   margin-top: 48px;
 }
 
-.button_type_save:hover {
+.button_type_submit:hover {
   background: rgba(0, 0, 0, 0.8);
 }
 
 @media screen and (max-width: 540px) {
-  .button_type_save {
+  .button_type_submit {
     font-size: 14px;
     line-height: 17px;
   }
