--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,7 @@
 @import url('../blocks/button/_type/button_type_close.css');
 @import url('../blocks/button/_type/button_type_submit.css');
 @import url('../blocks/button/_type/button_type_delete.css');
+@import url('../blocks/button/_disabled/button_disabled.css');
 
 @import url('../blocks/cards-list/cards-list.css');
 @import url('../blocks/card/card.css');
@@ -41,6 +42,10 @@
 @import url('../blocks/popup/__figure/popup__figure.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__form/popup__form.css');
+@import url('../blocks/popup/__label/popup__label.css');
+@import url('../blocks/popup/__error/popup__error.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
 @import url('../blocks/popup/__fig-image/popup__fig-image.css');
 @import url('../blocks/popup/__fig-caption/popup__fig-caption.css');
+
