--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -6,6 +6,8 @@
 @import url('../blocks/header/__logo/header__logo.css');
 @import url('../blocks/main/main.css');
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__avatar-container/profile__avatar-container.css');
+@import url('../blocks/profile/__edit-avatar/profile__edit-avatar.css');
 @import url('../blocks/profile/__photo/profile__photo.css');
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__name-wrap/profile__name-wrap.css');
